[project]
authors = [{name = "TonyGrif", email = "TonyGriffin2000@gmail.com"}]
dependencies = []
name = "saus"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.dependencies]
pandas = ">=3.0.1,<4"
numpy = ">=2.4.2,<3"
jupyterlab = ">=4.5.5,<5"
ipython = ">=9.11.0,<10"
ruff = ">=0.15.5,<0.16"     # TODO: Dev only dependency
ty = ">=0.0.21,<0.0.22"     # TODO: Dev only dependenc
seaborn = ">=0.13.2,<0.14"
xlrd = ">=2.0.2,<3"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
saus = { path = ".", editable = true }

[tool.pixi.tasks]
lint = "ruff format . & ruff check . --fix & ty check ."
lab = "pixi run jupyter lab"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
